# Content-Generation-AI

./: README.md
genesis/: README.md  pyproject.toml
genesis/src/genesis/: crew.py  main.py
